POST insertCategory
Signed-off-by: Lucas Volpato <lmaciel916@gmail.com>