@@ -19,17 +19,27 @@ public class CategoryService {
     @Autowired
     private CategoryRepository categoryRepository;
 
+    // usar transactional(readOnly = true) em toda op que é somente leitura
+
     //garante que a op é uma transação com db e readonly não trava o banco melhorando a performance
     @Transactional(readOnly = true)
     public List<CategoryDTO> findAll(){
         List<Category> list = categoryRepository.findAll();
-        return list.stream().map(CategoryDTO::new).collect(Collectors.toList());
+        return list.stream().map(CategoryDTO::new).toList();
     }
 
     @Transactional(readOnly = true)
     public CategoryDTO findById(Long id) {
         Optional<Category> obj = categoryRepository.findById(id);
         Category entity = obj.orElseThrow(() -> new EntityNotFoundException("Entity not found"));
+        return new CategoryDTO(entity);
+    }
+
+    @Transactional
+    public CategoryDTO insertCategory(CategoryDTO dto) {
+        Category entity = new Category();
+        entity.setName(dto.getName());
+        entity = categoryRepository.save(entity);
         return new CategoryDTO(entity);
     }
 }
